# open-studentaid

./: .gitignore  LICENSE  README.md  pyproject.toml
open_studentaid/: __init__.py  api.py  auth.py  config.py  sessions.py
open_studentaid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
