[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-studentaid"
version = "0.1.0"
description = "Open-source Python wrapper for StudentAid.gov servicer APIs"
authors = [{ name = "Bradley Florence", email = "bradleyseanf@users.noreply.github.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "beautifulsoup4",
    "playwright",
]
keywords = ["studentaid", "loan", "api", "nelnet", "usde", "education", "oauth2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/bradleyseanf/open-studentaid"

[project.urls]
Source = "https://github.com/bradleyseanf/open-studentaid"
Issues = "https://github.com/bradleyseanf/open-studentaid/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_studentaid*"]

[project.optional-dependencies]
dev = ["build", "twine"]
